samples/deep-validation/scripts/negative/non-bool-condition.ts
export function invalid(value: int32): int32 {
    if (value) {
        return 1;
    }
    return 0;
}
